[tool.poetry]
name = "python-utils"
version = "0.1.0"
description = ""
authors = ["michael <msoikis@gmail.com>"]
readme = "README.md"
packages = [{include = "python_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
